--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul class="header__contact-list">
           <li>
             <a class="header__contact-link" href="mailto:info@devstudio.com">
-              <svg class="header__icon" width="16" height="12">
+              <svg width="16" height="12">
                 <use href="images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -46,20 +46,38 @@
           </li>
           <li>
             <a class="header__contact-link" href="tel:+48111111111">
-              <svg class="header__icon" width="10" height="16">
+              <svg width="10" height="16">
                 <use href="images/icons.svg#icon-smartphone"></use>
               </svg>
               +48 111 111 111
             </a>
           </li>
         </ul>
+        <!-- HEADER HAMBURGER -->
+        <button
+          class="btn btn--hamburger js-open-menu"
+          type="button"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="header__hamburger" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu-hamburger"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu js-menu-container">
+        <button class="btn btn--mobile-menu-close js-close-menu">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-mobile-menu-close"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- MAIN -->
     <main>
       <!-- HERO -->
       <section class="section hero">
-        <div class="hero__content">
+        <div class="container hero__container">
           <h1 class="hero__title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button class="btn btn--hero" type="button" data-modal-open>
             Zamów usługę
@@ -85,7 +103,11 @@
               <!-- MODAL FORM -->
               <h2 class="order-form">Zostaw swoje dane w formularzu poniżej</h2>
               <form name="order" id="order" autocomplete="on" validate>
-                <div role="group" aria-labelledby="order">
+                <div
+                  class="order-form__container"
+                  role="group"
+                  aria-labelledby="order"
+                >
                   <label class="order-form__label">
                     <svg class="order-form__icon" width="18" height="18">
                       <use href="images/icons.svg#icon-modal-first-name"></use>
@@ -128,7 +150,7 @@
                     <textarea
                       class="order-form__textarea"
                       name="order-comment"
-                      rows="6"
+                      rows="3"
                       placeholder="Wprowadź tekst"
                     ></textarea>
                   </label>
@@ -139,14 +161,14 @@
                       type="checkbox"
                       required
                     />
-                    <svg
-                      class="order-form__checkbox-icon"
-                      width="16"
-                      height="15"
-                    >
-                      <use href="images/icons.svg#icon-check"></use>
-                    </svg>
                     <span class="order-form__checkbox-text">
+                      <svg
+                        class="order-form__checkbox-icon"
+                        width="16"
+                        height="15"
+                      >
+                        <use href="images/icons.svg#icon-check"></use>
+                      </svg>
                       Oświadczam iż akceptuję
                       <a class="order-form__link" href="#">Regulamin</a> i
                       <a class="order-form__link" href="#"
@@ -165,64 +187,72 @@
       <section class="section">
         <div class="container">
           <ul class="our-strengths">
-            <li>
-              <svg class="our-strengths__icon" width="270" height="120">
-                <use
-                  width="70"
-                  height="70"
-                  x="100"
-                  y="25"
-                  href="images/icons.svg#icon-antenna"
-                ></use>
-              </svg>
+            <li class="our-strengths__item">
+              <div class="our-strengths__icon">
+                <svg width="270" height="120">
+                  <use
+                    width="70"
+                    height="70"
+                    x="100"
+                    y="25"
+                    href="images/icons.svg#icon-antenna"
+                  ></use>
+                </svg>
+              </div>
               <h4 class="our-strengths__titles">LOREM IPSUM</h4>
               <p class="our-strengths__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
-              <svg class="our-strengths__icon" width="270" height="120">
-                <use
-                  width="70"
-                  height="70"
-                  x="100"
-                  y="25"
-                  href="images/icons.svg#icon-clock"
-                ></use>
-              </svg>
+            <li class="our-strengths__item">
+              <div class="our-strengths__icon">
+                <svg width="270" height="120">
+                  <use
+                    width="70"
+                    height="70"
+                    x="100"
+                    y="25"
+                    href="images/icons.svg#icon-clock"
+                  ></use>
+                </svg>
+              </div>
               <h4 class="our-strengths__titles">LOREM IPSUM</h4>
               <p class="our-strengths__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
-              <svg class="our-strengths__icon" width="270" height="120">
-                <use
-                  width="70"
-                  height="70"
-                  x="100"
-                  y="25"
-                  href="images/icons.svg#icon-diagram"
-                ></use>
-              </svg>
+            <li class="our-strengths__item">
+              <div class="our-strengths__icon">
+                <svg width="270" height="120">
+                  <use
+                    width="70"
+                    height="70"
+                    x="100"
+                    y="25"
+                    href="images/icons.svg#icon-diagram"
+                  ></use>
+                </svg>
+              </div>
               <h4 class="our-strengths__titles">LOREM IPSUM</h4>
               <p class="our-strengths__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
-              <svg class="our-strengths__icon" width="270" height="120">
-                <use
-                  width="70"
-                  height="70"
-                  x="100"
-                  y="25"
-                  href="images/icons.svg#icon-astronaut"
-                ></use>
-              </svg>
+            <li class="our-strengths__item">
+              <div class="our-strengths__icon">
+                <svg width="270" height="120">
+                  <use
+                    width="70"
+                    height="70"
+                    x="100"
+                    y="25"
+                    href="images/icons.svg#icon-astronaut"
+                  ></use>
+                </svg>
+              </div>
               <h4 class="our-strengths__titles">LOREM IPSUM</h4>
               <p class="our-strengths__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -273,13 +303,13 @@
           <h2 class="section__title">Nasz zespół</h2>
           <ul class="our-team">
             <!-- OUR TEAM CARD 1 -->
-            <li>
+            <li class="our-team__item">
               <figure class="our-team__figure">
                 <img
                   src="images/product-designer.jpg"
+                  srcset=""
+                  sizes=""
                   alt="John Doe"
-                  width="270"
-                  height="260"
                 />
                 <figcaption class="our-team__figcaption">
                   <h4 class="our-team__names">John Doe</h4>
@@ -334,13 +364,13 @@
               </figure>
             </li>
             <!-- OUR TEAM CARD 2 -->
-            <li>
+            <li class="our-team__item">
               <figure class="our-team__figure">
                 <img
                   src="images/frontend-developer.jpg"
+                  srcset=""
+                  sizes=""
                   alt="John Doe"
-                  width="270"
-                  height="260"
                 />
                 <figcaption class="our-team__figcaption">
                   <h4 class="our-team__names">John Doe</h4>
@@ -395,13 +425,13 @@
               </figure>
             </li>
             <!-- OUR TEAM CARD 3 -->
-            <li>
+            <li class="our-team__item">
               <figure class="our-team__figure">
                 <img
                   src="images/marketing.jpg"
+                  srcset=""
+                  sizes=""
                   alt="John Doe"
-                  width="270"
-                  height="260"
                 />
                 <figcaption class="our-team__figcaption">
                   <h4 class="our-team__names">John Doe</h4>
@@ -456,13 +486,13 @@
               </figure>
             </li>
             <!-- OUR TEAM CARD 4 -->
-            <li>
+            <li class="our-team__item">
               <figure class="our-team__figure">
                 <img
                   src="images/ui-designer.jpg"
+                  srcset=""
+                  sizes=""
                   alt="John Doe"
-                  width="270"
-                  height="260"
                 />
                 <figcaption class="our-team__figcaption">
                   <h4 class="our-team__names">John Doe</h4>
@@ -525,70 +555,76 @@
           <h2 class="section__title">Nasi klienci</h2>
           <div class="our-customers">
             <a class="our-customers__link" href="#">
-              <svg width="170" height="90">
-                <use
-                  width="106"
-                  height="60"
-                  x="32"
-                  y="16"
-                  href="images/icons.svg#icon-logo-5"
-                ></use>
-              </svg>
+              <div class="our-customers__link-container">
+                <svg width="106" height="90">
+                  <use
+                    width="106"
+                    height="60"
+                    y="16"
+                    href="images/icons.svg#icon-logo-5"
+                  ></use>
+                </svg>
+              </div>
             </a>
             <a class="our-customers__link" href="#">
-              <svg width="170" height="90">
-                <use
-                  width="106"
-                  height="60"
-                  x="32"
-                  y="16"
-                  href="images/icons.svg#icon-logo-4"
-                ></use>
-              </svg>
+              <div class="our-customers__link-container">
+                <svg width="106" height="90">
+                  <use
+                    width="106"
+                    height="60"
+                    y="16"
+                    href="images/icons.svg#icon-logo-4"
+                  ></use>
+                </svg>
+              </div>
             </a>
             <a class="our-customers__link" href="#">
-              <svg width="170" height="90">
-                <use
-                  width="106"
-                  height="60"
-                  x="32"
-                  y="16"
-                  href="images/icons.svg#icon-logo-3"
-                ></use>
-              </svg>
+              <div class="our-customers__link-container">
+                <svg width="106" height="90">
+                  <use
+                    width="106"
+                    height="60"
+                    y="16"
+                    href="images/icons.svg#icon-logo-3"
+                  ></use>
+                </svg>
+              </div>
             </a>
             <a class="our-customers__link" href="#">
-              <svg width="170" height="90">
-                <use
-                  width="106"
-                  height="60"
-                  x="32"
-                  y="16"
-                  href="images/icons.svg#icon-logo-2"
-                ></use>
-              </svg>
+              <div class="our-customers__link-container">
+                <svg width="106" height="90">
+                  <use
+                    width="106"
+                    height="60"
+                    y="16"
+                    href="images/icons.svg#icon-logo-2"
+                  ></use>
+                </svg>
+              </div>
             </a>
             <a class="our-customers__link" href="#">
-              <svg width="170" height="90">
-                <use
-                  width="106"
-                  height="60"
-                  x="32"
-                  y="16"
-                  href="images/icons.svg#icon-logo-1"
-                ></use>
-              </svg>
+              <div class="our-customers__link-container">
+                <svg width="106" height="90">
+                  <use
+                    width="106"
+                    height="60"
+                    y="16"
+                    href="images/icons.svg#icon-logo-1"
+                  ></use>
+                </svg>
+              </div>
             </a>
             <a class="our-customers__link" href="#">
-              <svg width="170" height="90">
-                <use
-                  width="106"
-                  height="60"
-                  x="32"
-                  y="16"
-                  href="images/icons.svg#icon-logo-0"
-                ></use>
-              </svg>
+              <div class="our-customers__link-container">
+                <svg width="106" height="90">
+                  <use
+                    width="106"
+                    height="60"
+                    y="16"
+                    href="images/icons.svg#icon-logo-0"
+                  ></use>
+                </svg>
+              </div>
             </a>
           </div>
         </div>
@@ -702,6 +738,13 @@
       </div>
     </footer>
     <!-- SCRIPT -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
