--- a/index.html
+++ b/index.html
@@ -65,12 +65,50 @@
           </svg>
         </button>
       </div>
+      <!-- MOBILE MENU -->
       <div class="mobile-menu js-menu-container">
         <button class="btn btn--mobile-menu-close js-close-menu">
           <svg width="40" height="40">
             <use href="./images/icons.svg#icon-mobile-menu-close"></use>
           </svg>
         </button>
+        <div class="mobile-menu__container">
+          <ul class="mobile-menu__nav-list">
+            <li>
+              <a
+                class="mobile-menu__nav-item mobile-menu__nav-item--active"
+                href="#"
+                >Agencja</a
+              >
+            </li>
+            <li>
+              <a class="mobile-menu__nav-item" href="portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="mobile-menu__nav-item">
+              <a class="mobile-menu__nav-item" href="#">Kontakt</a>
+            </li>
+          </ul>
+          <div>
+            <ul class="mobile-menu__contact-list">
+              <li>
+                <a class="mobile-menu__contakt-tel" href="tel:+48111111111">+48 111 111 111</a>
+              </li>
+              <li>
+                <a class="mobile-menu__contakt-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+            </ul>
+            <ul class="mobile-menu__social-list">
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Instagram</a>
+              </li>
+              <li class="mobile-menu__social-item"><a class="mobile-menu__social-link" href="#">Twitter</a></li>
+              <li class="mobile-menu__social-item"><a class="mobile-menu__social-link" href="#">Facebook</a></li>
+              <li class="mobile-menu__social-item"><a class="mobile-menu__social-link" href="#">Linkedin</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- MAIN -->
