--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,72 @@
             </a>
           </li>
         </ul>
+        <!-- HEADER HAMBURGER -->
+        <button
+          class="btn btn--hamburger js-open-menu"
+          type="button"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="header__hamburger" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu-hamburger"></use>
+          </svg>
+        </button>
+      </div>
+      <!-- MOBILE MENU -->
+      <div class="mobile-menu js-menu-container">
+        <button class="btn btn--mobile-menu-close js-close-menu">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-mobile-menu-close"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu__container">
+          <ul class="mobile-menu__nav-list">
+            <li>
+              <a class="mobile-menu__nav-item" href="index.html">Agencja</a>
+            </li>
+            <li>
+              <a
+                class="mobile-menu__nav-item mobile-menu__nav-item--active"
+                href="#"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a class="mobile-menu__nav-item" href="#">Kontakt</a>
+            </li>
+          </ul>
+          <div>
+            <ul class="mobile-menu__contact-list">
+              <li>
+                <a class="mobile-menu__contakt-tel" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
+              </li>
+              <li>
+                <a
+                  class="mobile-menu__contakt-email"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mobile-menu__social-list">
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Instagram</a>
+              </li>
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Twitter</a>
+              </li>
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Facebook</a>
+              </li>
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Linkedin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- MAIN -->
@@ -439,5 +505,13 @@
         </form>
       </div>
     </footer>
+    <!-- SCRIPT -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
