--- a/index.html
+++ b/index.html
@@ -93,19 +93,31 @@
           <div>
             <ul class="mobile-menu__contact-list">
               <li>
-                <a class="mobile-menu__contakt-tel" href="tel:+48111111111">+48 111 111 111</a>
+                <a class="mobile-menu__contakt-tel" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
               </li>
               <li>
-                <a class="mobile-menu__contakt-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a
+                  class="mobile-menu__contakt-email"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
             </ul>
             <ul class="mobile-menu__social-list">
               <li class="mobile-menu__social-item">
                 <a class="mobile-menu__social-link" href="#">Instagram</a>
               </li>
-              <li class="mobile-menu__social-item"><a class="mobile-menu__social-link" href="#">Twitter</a></li>
-              <li class="mobile-menu__social-item"><a class="mobile-menu__social-link" href="#">Facebook</a></li>
-              <li class="mobile-menu__social-item"><a class="mobile-menu__social-link" href="#">Linkedin</a></li>
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Twitter</a>
+              </li>
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Facebook</a>
+              </li>
+              <li class="mobile-menu__social-item">
+                <a class="mobile-menu__social-link" href="#">Linkedin</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -345,8 +357,17 @@
               <figure class="our-team__figure">
                 <img
                   src="images/product-designer.jpg"
-                  srcset=""
-                  sizes=""
+                  srcset="
+                    images/product-designer-354.jpg   354w,
+                    images/product-designer-450.jpg   450w,
+                    images/product-designer-540.jpg   540w,
+                    images/product-designer-708.jpg   708w,
+                    images/product-designer-810.jpg   810w,
+                    images/product-designer-900.jpg   900w,
+                    images/product-designer-1062.jpg 1062w,
+                    images/product-designer-1350.jpg 1350w
+                  "
+                  sizes="(min-width: 1200px) 1062px, (min-width: 768px) 708px, 100vw"
                   alt="John Doe"
                 />
                 <figcaption class="our-team__figcaption">
@@ -406,8 +427,17 @@
               <figure class="our-team__figure">
                 <img
                   src="images/frontend-developer.jpg"
-                  srcset=""
-                  sizes=""
+                  srcset="
+                    images/frontend-developer-354.jpg   354w,
+                    images/frontend-developer-450.jpg   450w,
+                    images/frontend-developer-540.jpg   540w,
+                    images/frontend-developer-708.jpg   708w,
+                    images/frontend-developer-810.jpg   810w,
+                    images/frontend-developer-900.jpg   900w,
+                    images/frontend-developer-1062.jpg 1062w,
+                    images/frontend-developer-1350.jpg 1350w
+                  "
+                  sizes="(min-width: 1200px) 1062px, (min-width: 768px) 708px, 100vw"
                   alt="John Doe"
                 />
                 <figcaption class="our-team__figcaption">
@@ -467,8 +497,17 @@
               <figure class="our-team__figure">
                 <img
                   src="images/marketing.jpg"
-                  srcset=""
-                  sizes=""
+                  srcset="
+                    images/marketing-354.jpg   354w,
+                    images/marketing-450.jpg   450w,
+                    images/marketing-540.jpg   540w,
+                    images/marketing-708.jpg   708w,
+                    images/marketing-810.jpg   810w,
+                    images/marketing-900.jpg   900w,
+                    images/marketing-1062.jpg 1062w,
+                    images/marketing-1350.jpg 1350w
+                  "
+                  sizes="(min-width: 1200px) 1062px, (min-width: 768px) 708px, 100vw"
                   alt="John Doe"
                 />
                 <figcaption class="our-team__figcaption">
@@ -528,8 +567,17 @@
               <figure class="our-team__figure">
                 <img
                   src="images/ui-designer.jpg"
-                  srcset=""
-                  sizes=""
+                  srcset="
+                    images/ui-designer-354.jpg   354w,
+                    images/ui-designer-450.jpg   450w,
+                    images/ui-designer-540.jpg   540w,
+                    images/ui-designer-708.jpg   708w,
+                    images/ui-designer-810.jpg   810w,
+                    images/ui-designer-900.jpg   900w,
+                    images/ui-designer-1062.jpg 1062w,
+                    images/ui-designer-1350.jpg 1350w
+                  "
+                  sizes="(min-width: 1200px) 1062px, (min-width: 768px) 708px, 100vw"
                   alt="John Doe"
                 />
                 <figcaption class="our-team__figcaption">
