--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/modern-normalize.min.css" />
-    <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
@@ -157,7 +156,7 @@
                 <div class="portfolio-cards__box">
                   <img
                     class="portfolio-cards__img"
-                    src="images/laptop-1.jpg"
+                    src="images/portfolio/laptop-1.jpg"
                     alt="laptop"
                   />
                   <div class="portfolio-cards__overlay">
